<resources>
    <string name="app_name">Adapto Lite</string>
    <string name="profiles">Profiles</string>
    <string name="basal_profiles">Basal profiles</string>
    <string name="scanning_ble_device">Available BLE devices</string>
    <string name="settings">Settings</string>
    <string name="system_refilled">System refilled</string>
    <string name="refilling">Refilling</string>
    <string name="temp_basal">Temp Basal</string>
    <string name="bolus">Bolus</string>
    <string name="about_the_application">About the Application</string>
    <string name="application_name">Application Name:</string>
    <string name="version_name">Version Name:</string>
    <string name="version_code">Version Code:</string>
    <string name="box">Box</string>
    <string name="select_box">Select Box</string>
    <string name="select_boxes_number">Select the number of boxes:</string>
    <string name="confirm">Confirm</string>
    <string name="enable_timer">Enable timer</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_a_box">Please select a box</string>
    <string name="box_title">Box №%1$d</string>
    <string name="empty_box">This box is empty. Try another one.</string>
    <string name="to_main_menu">To Main Menu</string>
    <string name="timer_value">Timer: %1$d sec.</string>
    <string name="the_end">The end</string>
    <string name="timer_end_message">Oops, there is no enough time, try again later.</string>
    <string name="done">Done</string>
    <string name="congratulations">Congratulations!</string>
    <string name="done_icon">Done icon</string>
    <string name="battery">Battery</string>
    <string name="on_average_up_to_12_days">On average up to %d days</string>
    <string name="li_ion">Li-Ion</string>
    <string name="on_average_up_to_7_days">On average up to %d days</string>
    <string name="reservoir">Reservoir</string>
    <string name="up_to_46_hours">up to %d hours</string>
    <string name="cannule">Cannule</string>
    <string name="ok">OK</string>
    <string name="refill">Refill</string>
    <string name="return_str">Return</string>
    <string name="offline">Offline</string>
    <string name="connected">Connected</string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="first_profile">First profile</string>
    <string name="activate">Activate</string>
    <string name="edit">Edit</string>
    <string name="massage_dialog_select_profile">Do you want to activate this profile?</string>
    <string name="massage_dialog_delete_profile">Do you want DELETE this profile?</string>
    <string name="edit_profile_name">Edit profile name</string>
    <string name="time_dialog_title">Period start time</string>
    <string name="drug_injection_rate">Drug injection rate</string>
    <string name="note_basal_profile">%.2fU at day</string>
    <string name="step">Step</string>
    <string name="extended">Extended</string>
    <string name="dual_pattern">Dual Pattern</string>
    <string name="superr">Super</string>
    <string name="u">U</string>
    <string name="value">Value</string>
    <string name="go">Go</string>
    <string name="time">Time</string>
    <string name="min">min</string>
    <string name="first_injection">First injection</string>
    <string name="second_injection">Second injection</string>
    <string name="basal_value">Basal value</string>
    <string name="bolus_value">Bolus value</string>
    <string name="basal_off_time">Basal OFF time</string>
    <string name="disconnect_the_cannula_from_the_magistral">Disconnect the cannula from the magistral</string>
    <string name="start">Start</string>
    <string name="active_boluses">Active boluses</string>
    <string name="bolus_u_n_u_injected">Bolus %.2fU \n%.2fU injected</string>
    <string name="extended_u_min_n_u_injected">Extended %.2fU %dmin \n%.2fU injected</string>
    <string name="dual_pattern_u_min_n_u_injected">Dual pattern %.2fU %dmin \n%.2fU injected</string>
    <string name="super_u_n_u_injected">Super %.2fU \n%.2fU injected</string>
    <string name="delete_bolus">Delete bolus</string>
    <string name="do_you_want_delete_this_bolus">Do you want DELETE this bolus?</string>
    <string name="do_you_want_reset_cannule_timer">Do you want reset cannule timer?</string>
    <string name="reset">Reset</string>
    <string name="_u">%dU</string>
    <string name="_h">%dh</string>
    <string name="refilling_varning">Wait for refuelling to complete</string>
    <string name="profile_settings_varning">You have allocated the entire time range</string>
    <string name="li_ion_percent">100%</string>
    <string name="battery_percent">100%</string>
    <string name="bsl_3_7_u_h">Bsl: %.2fU/h</string>
    <string name="bls_4_99u">Bls: %.2fU</string>
    <string name="bls____">Bls: ----</string>
    <string name="iob_4_7_u">"IOB: %.1f U "</string>
    <string name="expendable_materials">EXPENDABLE MATERIALS</string>
    <string name="reset_cannule_timer">Reset cannule timer</string>
    <string name="refill_reservoir">Refill reservoir</string>
    <string name="main_settings">MAIN SETTINGS</string>
    <string name="connected_device">Connected device</string>
    <string name="pin_code">PIN code app</string>
    <string name="settings_pin">Settings PIN</string>
    <string name="cannule_timer">Cannule timer</string>
    <string name="cannule_timer_h">%dh</string>
    <string name="cannule_timer_m">%dmin</string>
    <string name="available_boluses">AVAILABLE BOLUSES</string>
    <string name="step_bolus">Step bolus</string>
    <string name="extended_bolus">Extended bolus</string>
    <string name="dual_pattern_bolus">Dual pattern bolus</string>
    <string name="super_bolus">Super bolus</string>
    <string name="temporary_basal">Temporary basal</string>
    <string name="device">DEVICE</string>
    <string name="disconnect_from_device">Disconnect from device</string>
    <string name="waiting_for_the_end_of_the_process_n_n_follow_the_information_on_the_screen_of_the_device">Waiting for the end of the process. \n\n Follow the information on the screen of the device.</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="dialog_pin_app_varning">Enter 4 digits</string>
    <string name="enter_settings_pin">Enter settings PIN</string>
    <string name="pin_entering_varning">You entered an incorrect code</string>
    <string name="step_bolus_varning">Simple bolus is not allowed by application settings</string>
    <string name="extended_bolus_varning">Extended bolus is not allowed by application settings</string>
    <string name="dual_pattern_bolus_varning">Dual pattern bolus is not allowed by application settings</string>
    <string name="super_bolus_varning">Super bolus is not allowed by application settings</string>
    <string name="app_pin_entering_varning">You entered an incorrect code. You have %d attempts left before you lock the application</string>
    <string name="app_main_varning">Application is completely blocked</string>
    <string name="basal_speed">Basal Speed</string>
    <string name="title_location_permission">Please, granted location permission</string>
    <string name="text_location_permission">You must be granted location permission for correct scanning devices</string>
    <string name="enter_pump_code">Enter pump code</string>
    <string name="close">Close</string>
    <string name="enter_bolus">Enter bolus?</string>
    <string name="do_you_want_enter_bolus_whith_2fu_basal_volume">Do you want ENTER %.2fU bolus?</string>
    <string name="do_you_want_enter_super_bolus_whith_2fu_basal_volume">Do you want ENTER %.2fU super bolus with %.2fU basal volume in %d min?</string>
    <string name="do_you_want_enter_extended_bolus_whith_2fu_basal_volume">Do you want ENTER %.2fU extended bolus at %d min?</string>
    <string name="do_you_want_enter_dual_pattern_bolus_whith_2fu_basal_volume">Do you want ENTER %.2fU dual pattern bolus with %.2fU strech part at %d min?</string>
    <string name="refilling_init">Initialization refilling</string>
    <string name="continue_to_refilling_on_the_device">Continue to refilling on the device</string>
    <string name="enter_temporary_basal">Enter temporary basal</string>
    <string name="temporary_basal_is_introduced_at_speed_2fu_h_do_you_want_to_cancel_it">Temporary basal is introduced at speed %.2f U/h at %d min. Do you want to cancel it?</string>
    <string name="temporary_basal_is_introduced_at_speed_2fu_h_do_you_want_to_cancel_itу">The amount of drug you wanted to insert %.2f U.</string>
    <string name="temporary_basal_is_introduced_at_speed_2fu_h_do_you_want_to_cancel_itуx">Actually inserted %.2f U.</string>
    <string name="bhjrbvuhslvbnidsjvkamovk">Current basal profile %d.</string>
    <string name="bhjrbvuhslvbnidsjvskamovk">Current basal velocity %.2f U/h.</string>
    <string name="bhjrbvuhslvbnidsjvsksamovk">Speed temporary basal %.2f U/h.</string>
    <string name="bhjrbvuhslvbnifdsjvsksamovk">Time of activity of temporary basal %d min.</string>
    <string name="bhjrbvuhslvsbnifdsjvsksamovk">Remaining time of temporary basal %d min.</string>
    <string name="bhjrbvuhsdlvsbnifdsjvsksamovk">Per hour entered %.2f U.</string>
    <string name="gps_network_not_enabled">Enabled geolocation is necessary to connect to the pump via bluetooth.</string>
    <string name="open_location_settings">enable geolocation</string>
    <string name="location_permission">Location permission</string>

    <string name="update_basal_profiles_info">Updating basal profiles</string>
    <string name="update_basal_profiles_info_massage">Synchronize %d</string>
    <string name="done2">done</string>
    <string name="home">HOME</string>
    <string name="statistic">STATISTIC</string>
    <string name="bms">BMS</string>
    <string name="debugging">DEBUGGING</string>
    <string name="disconnection_from_the_device">Disconnection from the device</string>
    <string name="are_you_sure_you_want_to_disconnect_from_your_device_and_go_to_the_scan_screen">Are you sure you want to disconnect from your device and go to the scan screen?</string>


    <plurals name="boxes">
        <item quantity="zero">%1$d boxes</item>
        <item quantity="one">%1$d box</item>
        <item quantity="two">%1$d boxes</item>
        <item quantity="few">%1$d boxes</item>
        <item quantity="many">%1$d boxes</item>
        <item quantity="other">%1$d boxes</item>
    </plurals>
    <string name="title_activity_compose">ComposeActivity</string>

</resources>