<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_andex_alert_dialog_layout_image_left1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_andex_alert_dialog_layout_image_left2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_andex_alert_dialog_layout_image_right1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.62" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_andex_alert_dialog_layout_image_right2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <TextView
            android:id="@+id/tv_andex_alert_dialog_layout_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="center"
            android:text="@string/battery"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/alert_dialog_battery_iv"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/battery_for_dialog_100"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toBottomOf="@+id/tv_andex_alert_dialog_layout_title"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/alert_dialog_percent_battery_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="right"
            android:text="@string/battery_percent"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/alert_dialog_battery_iv"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right1"
            app:layout_constraintTop_toTopOf="@+id/alert_dialog_battery_iv"
            tools:ignore="RtlHardcoded" />

<!--        <TextView-->
<!--            android:id="@+id/alert_dialog_battery_message_tv"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/sf_pro_text_bold"-->
<!--            android:gravity="right"-->
<!--            android:text="@string/on_average_up_to_12_days"-->
<!--            android:textColor="#99000000"-->
<!--            android:textSize="10sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"-->
<!--            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_percent_battery_tv"-->
<!--            tools:ignore="RtlHardcoded,SmallSp" />-->

        <TextView
            android:id="@+id/alert_dialog_li_ion_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="center"
            android:text="@string/li_ion"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_battery_iv" />

        <ImageView
            android:id="@+id/alert_dialog_li_ion_iv"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/battery_for_dialog_100"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_li_ion_title_tv"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/alert_dialog_percent_li_ion_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="right"
            android:text="@string/li_ion_percent"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/alert_dialog_li_ion_iv"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right1"
            app:layout_constraintTop_toTopOf="@+id/alert_dialog_li_ion_iv"
            tools:ignore="RtlHardcoded" />

<!--        <TextView-->
<!--            android:id="@+id/alert_dialog_li_ion_message_tv"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/sf_pro_text_bold"-->
<!--            android:gravity="right"-->
<!--            android:text="@string/on_average_up_to_7_days"-->
<!--            android:textColor="#99000000"-->
<!--            android:textSize="10sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_percent_li_ion_tv"-->
<!--            tools:ignore="RtlHardcoded,SmallSp" />-->

        <TextView
            android:id="@+id/alert_dialog_reservoir_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_bold"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/reservoir"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_li_ion_iv" />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/alert_dialog_circle_progress_reservoir_pb"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:cpb_background_progressbar_color="#19000000"
            app:cpb_background_progressbar_width="7dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/circle_progress_full"
            app:cpb_progressbar_width="7dp"
            app:cpb_round_border="true"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_reservoir_title_tv" />

        <ImageView
            android:id="@+id/alert_dialog_reservoir_iv"
            android:layout_width="11dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_reservoir"
            app:layout_constraintBottom_toBottomOf="@+id/alert_dialog_circle_progress_reservoir_pb"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toTopOf="@+id/alert_dialog_circle_progress_reservoir_pb"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/alert_dialog_volume_reservoir_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="right"
            android:text="@string/_u"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/alert_dialog_circle_progress_reservoir_pb"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left2"
            app:layout_constraintTop_toTopOf="@+id/alert_dialog_circle_progress_reservoir_pb"
            tools:ignore="HardcodedText,RtlHardcoded" />


        <TextView
            android:id="@+id/alert_dialog_reservoir_message_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_light"
            android:gravity="right"
            android:text="@string/up_to_46_hours"
            android:textColor="#99000000"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left2"
            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_volume_reservoir_tv"
            tools:ignore="RtlHardcoded,SmallSp" />

        <TextView
            android:id="@+id/alert_dialog_cannule_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="center"
            android:text="@string/cannule"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_reservoir_message_tv" />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/alert_dialog_circle_progress_cannule_pb"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:cpb_background_progressbar_color="#19000000"
            app:cpb_background_progressbar_width="7dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/circle_progress_low"
            app:cpb_progressbar_width="7dp"
            app:cpb_round_border="true"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_cannule_title_tv" />

        <ImageView
            android:id="@+id/alert_dialog_cannule_iv"
            android:layout_width="18dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cannule"
            app:layout_constraintBottom_toBottomOf="@+id/alert_dialog_circle_progress_cannule_pb"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left1"
            app:layout_constraintTop_toTopOf="@+id/alert_dialog_circle_progress_cannule_pb"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/alert_dialog_volume_cannule_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="right"
            android:text="@string/_h"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/alert_dialog_circle_progress_cannule_pb"
            app:layout_constraintEnd_toStartOf="@+id/gl_andex_alert_dialog_layout_image_right2"
            app:layout_constraintStart_toStartOf="@+id/gl_andex_alert_dialog_layout_image_left2"
            app:layout_constraintTop_toTopOf="@+id/alert_dialog_circle_progress_cannule_pb"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:background="#483c3c3c"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert_dialog_circle_progress_cannule_pb" />

        <View
            android:id="@+id/v_andex_alert_dialog_layout_button_divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:background="#483c3c3c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <TextView
            android:id="@+id/tv_andex_alert_dialog_layout_confirm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="@string/ok"
            android:textColor="#1377E6"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/v_andex_alert_dialog_layout_button_divider"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <View
            android:id="@+id/v_andex_alert_dialog_layout_confirm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/v_andex_alert_dialog_layout_button_divider"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_andex_alert_dialog_layout_cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/sf_pro_display_light"
            android:text="@string/refill"
            android:textColor="#1377E6"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/v_andex_alert_dialog_layout_button_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/v_andex_alert_dialog_layout_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/v_andex_alert_dialog_layout_button_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view4"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>